--- a/IdentityServer4NetCore/IdentityServer4NetCore.csproj
+++ b/IdentityServer4NetCore/IdentityServer4NetCore.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="1.4.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="1.0.1" />
+    <PackageReference Include="IdentityServer4.Postgresql" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.1" />
